correction des erreurs de contraste sur les 2 pages

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, 1);
 }
 
 .d-bloc .a-btn:hover,
@@ -320,6 +320,8 @@ a:hover {
     margin-right: -16px;
     float: right;
     z-index: 1;
+    padding-left: 0;/**/
+    list-style-type: none;/**/
 }
 
 .nav > li {
@@ -332,10 +334,10 @@ a:hover {
     text-align: inherit;
 }
 
-.nav > li a:hover,
+/*.nav > li a:hover,
 .nav > li a:focus {
     background: transparent;
-}
+}*/     
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
@@ -651,15 +653,16 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    /*color: #575757!important;*/
+    color: #000000;
 }
 
 .container {
     max-width: 1000px;
 }
-
-.hero-bloc-text {
+.hero-bloc-text .tc-black{
     font-size: 38px;
+    color: #000000;
 }
 
 .hero-bloc-text-sub {
@@ -677,7 +680,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 1em;
 }
 
 .tight-width-whitespace {
@@ -701,7 +704,7 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: 30px auto 30px auto;
 }
 
 h2 {
@@ -736,9 +739,11 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #FFFFFF;
 }
-
+#bloc-8 .col-sm-12 .white{
+    color: #000000;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
 }
@@ -775,12 +780,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine:hover {
